--- a/WeatherDashboard/Pages/Shared/_Layout.cshtml
+++ b/WeatherDashboard/Pages/Shared/_Layout.cshtml
@@ -6,35 +6,39 @@
     <title>@ViewData["Title"] - WeatherDashboard</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/additionalStyles.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-white bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WeatherDashboard</a>
+
+                <a class="navbar-brand text-dark" asp-area="" asp-page="/Index">WeatherDashboard</a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                    <ul class="navbar-nav flex-grow-1 fl justify-content-end">
+
+                        <li class="nav-item text-center">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/WeatherData/Index">WeatherData</a>
-                        </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Outdoors">Outdoors</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item text-center">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Indoors">Indoors</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <li class="nav-item text-center">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Balcony">Balcony</a>
                         </li>
+
                     </ul>
                 </div>
+
             </div>
         </nav>
     </header>
@@ -45,9 +49,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - WeatherDashboard - <a asp-area="" asp-page="/Privacy">Privacy</a>
+    <footer class="footer bg-dark text-white transparent">
+        <div class="container text-center">
+            Made with <i class="text-danger">&#9829;</i> by Rafael Schmidl
         </div>
     </footer>
 
